# zdkimfilter

./: .travis.yml  ChangeLog  Dockerfile  LICENSE  Makefile.am  Makefile.in  README  READMEsvn  aclocal.m4  config.h.in  configure  configure.ac  db_conv.sh  myinstall.sh  myinstall.sh.in  odbx_example-1.2.conf  odbx_example-1.2.sql  odbx_example-1.4.conf  odbx_example-1.5.sql  odbx_example-1.6.conf  odbx_example-1.6.sql  odbx_example-1.7.conf  odbx_example-1.7.sh  odbx_example-1.8.conf  odbx_example-1.8.sql  odbx_example.conf  odbx_example.sh  odbx_example.sql  release-notes-1.1.txt  release-notes-1.2.txt  release-notes-1.3.txt  release-notes-1.4.txt  release-notes-1.5.txt  release-notes-1.6.txt  release-notes-1.7.txt  release-notes-1.8.txt  release-notes-2.0.txt  tentative-psddmarc-list.txt  zaggregate-cancel-example.sh  zaggregate-example.sh  (+1 more)
debian/: Makefile.am  Readme.debian  changelog  config  control  copyright  postinst  postrm  preinst  prerm  rules  upgrade_mysql_1.7.sql  zdkimfilter.install
etc/: 2idn.pod.in  Makefile.am  Makefile.in  conf2man.pl  conf2pod.pl  dbgraph.py  dbtemplate.html  dkimsign.pod.in  logrotate.example  mangle_doc.pl  odbx_example.pod.in  perlpod.py  redact.pod.in  resend-with-preheader.pl  resend-with-preheader.sh  strrepl.py  urldecode.pod  urlencode.pod  webdoc.sh  zaggregate.pod.in  zdkimfilter.conf.dist.in  zdkimfilter.conf.pod.in  zdkimfilter.pod.in  zfilter_db.pod.in
m4/: m4_ax_func_snprintf.m4
src/: 2idn.c  Makefile.am  Makefile.in  OpenDKIMstats.h  cstring.c  cstring.h  database.c  database.h  database_statements.h  database_variables.h  dkim-mailparse.c  dkim-mailparse.h  dkimsign.c  filecopy.h  filedefs.h  filedefs.h.in  filterlib.c  filterlib.h  ip_to_hex.c  md5.c  md5.h  myadsp.c  myadsp.h  myreputation.c  myreputation.h  myvbr.c  myvbr.h  parm.c  parm.h  publicsuffix.c  publicsuffix.h  redact.c  redact.h  rfc822.c  rfc822.h  rfc822_getaddr.c  rfc822_getaddrs.c  spf_result_string.h  urldecode.c  urlencode.c  (+8 more)
tests/: Makefile.am  Makefile.in  atlocal.in  funnymail.noparen.eml  funnymail.noparen.eml.b64  package.m4  short-list  testsuite  testsuite.at  undo_percent_relay.ctlfile.txt
tests/keys/: author.example  cauth  cother  csender  csub  ctl2  mail  mailsub  other.example  sender.example  subdomain.author.example  tauth  tauth-datechanged  tauth_bysub  test.conf  tother  tsender  tsub_byauth  tsub_bysub  x1.txt  x2.private  x2.txt  x3.private  x3.txt  x4.private  x4.txt
