## Automake

@SET_MAKE@

ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src etc tests debian
EXTRA_DIST = LICENSE LICENSE.Sendmail myinstall.sh zdkimfilter.spec\
 odbx_example.sql odbx_example.conf odbx_example.sh zaggregate-example.sh\
 zaggregate-cancel-example.sh $(wildcard release-notes-*.txt) \
 etc/urlencode.pod etc/urldecode.pod db_conv.sh tentative-psddmarc-list.txt

